[package]
name = "sms-telegram-forwarder"
version = "0.1.0"
authors = ["Xiangru Lian <admin@mail.xrlian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
chrono = "0.4"
ureq = "2.0"